'fixed' bg image overlap with protfolio

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -460,8 +460,9 @@ footer .footer-below {
 
 img.bg {
   /* Set rules to fill background */
-  min-height: 100%;
-  min-width: 1024px;
+  min-height: 500px;
+  max-height: 80%;
+  min-width: 100%;
     
   /* Set up proportionate scaling */
   width: 100%;
